# educational-task-1

./: CMakeLists.txt  README.md
include/: second.hpp
src/: main.cpp
